## todo

### IMPORTANT
- git submodule, change remote URL to gitpub
- make sure README get started is correct
- make sure submodule update automatically, maybe really need to commit and then `git submodule update`?
- what if the embedding is generated by base model, but the user has changed to huge model?
- allow resetting the image embedding for all slices and for the current slice only
- bugfix: when undo, the mask may not be the same as before
- when verification fails, display a big msg in screen rather than generate a file
- CLI to adjust all images in the BIDS folder
- Shift+ArrowKey to adjust brightness for the current slice
- feature: new mode ADJUST
    - continuously adjust denoising strength
    - Esc to set the current slice status to "NOT_PARSED" so that user can compute image embedding again
- bugfix: deal with exceptions 
    - pressing Space and doing bounding box
    - change to next file before image embedding is done
- what if press and hold LMB and goes to another slice? Need to cancel box prompt
- optimize multiprocess, maybe try Coroutine or thread
- makefile for incremental compilation
- correct orientation, label left, right, etc
    - Fix bug: anisotropic resolution
    - MPR rendering, multi-planar reformation
        - cross hair
- feature: text prompt
- consider adjusting brightness in Almond's way
- hotkey for reloading config
- Ctrl+Y, redo (undo the previous "undo")

### OTHERS
- try with coroutine, multiple thread and mutiple process
- improve: faster rendering by `pygame.display.update()`
- Use not only the mask of the highest score, may be hotkey C to cycle through possible masks
- render mask, control points on `self.surf_slc` instead of on `self.screen`
- Fix bug: when cursor is outside the slice, disable previewMask()
- Add munual fine editing of masks
- support multiple labels. eg. segment liver and lung with different labels
- MIP rendering, maximum intensity projection，MIP
- deal with anisotropic pixels